# LocalScribe

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: audio.py  config.py  main.py  transcriber.py  utils.py
